--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "schema-utils": "^3.0.0",
+    "styled-components": "^5.2.1",
+    "styled-reset": "^4.3.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
