--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "schema-utils": "^3.0.0",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
+    "url-loader": "^4.1.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -41,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
