--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-testing-library": "^3.9.2",
     "eslint-webpack-plugin": "^2.1.0",
     "fs-extra": "^9.0.1",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.0",
@@ -76,7 +77,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "deploy": "gh-pages -d build",
+    "predeploy": "yarn run build"
   },
   "eslintConfig": {
     "extends": [
@@ -84,6 +87,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://gyeong-jin-kwak.github.io/react-movie/",
   "browserslist": {
     "production": [
       ">0.2%",
